--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "fallguys-webshop-ssg",
   "private": true,
   "scripts": {
+    "start": "gridsome develop",
     "build": "gridsome build",
     "develop": "gridsome develop",
     "explore": "gridsome explore"
