--- a/.github/workflows/daily-deploy.yml
+++ b/.github/workflows/daily-deploy.yml
@@ -1,7 +1,7 @@
 name: Daily netlify deploy
 on:
   schedule:
-    - cron:  '34 20 * * *' # every day, utc 
+    - cron:  '00 12 * * *' # every day, utc 
 
 jobs:
   build:
@@ -10,7 +10,5 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     
-    # We don't need to build
-    # just trigger the netlify build task
-    
+    # We don't need to build here, just trigger our netlify build task
     - run: curl -X POST -d {} $NETLIFY_WEBHOOK_URL
