--- a/.github/workflows/daily-deploy.yml
+++ b/.github/workflows/daily-deploy.yml
@@ -1,10 +1,7 @@
 name: Daily netlify deploy
 on:
   schedule:
-    - cron:  '26 14 * * *' # every day, utc 
-  push:
-    branches: 
-    - master
+    - cron:  '00 12 * * *' # every day, utc
 
 jobs:
   build:
@@ -15,5 +12,5 @@ jobs:
     
     - name: Trigger Netlify build webhook
       env:
-        NETLIFY_WEBHOOK_URL: ${{ secrets.NETLIFY_WEBHOOK_URL }}
-      run: curl -X POST -d {} "$NETLIFY_WEBHOOK_URL"
+        WEBHOOK_URL: ${{ secrets.NETLIFY_WEBHOOK_URL }}
+      run: curl -X POST -d {} "$WEBHOOK_URL"
