--- a/.github/workflows/daily-deploy.yml
+++ b/.github/workflows/daily-deploy.yml
@@ -1,16 +1,17 @@
-name: Daily netlify deploy
+name: Daily Deploy
 on:
   schedule:
-    - cron:  '00 12 * * *' # every day, utc
+    - cron:  '00 9 * * *' # every day, utc
+  workflow_dispatch: # Allows us to run job manually
 
 jobs:
-  build:
+  deploy:
     runs-on: ubuntu-latest
     
     steps:
     - uses: actions/checkout@v3
     
-    - name: Trigger Netlify build webhook
+    - name: Trigger Netlify build
       env:
         WEBHOOK_URL: ${{ secrets.NETLIFY_WEBHOOK_URL }}
       run: curl -X POST -d {} "$WEBHOOK_URL"
